--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -1,3 +1,44 @@
 .Pokecard {
-  border: 2px solid mediumseagreen;
+  width: 300px;
+  text-align: center;
+  padding: 5px;
+  box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
+  background-color: white;
+  border-radius: 5px;
+}
+
+.Pokecard-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 250px;
+  background-color: #eceff1;
+  border: 5px;
+  margin-bottom: 1rem;
+}
+
+.Pokecard:hover {
+  background-color: #aaa;
+}
+
+.Pokecard-title {
+  font-size: 150%;
+}
+
+.Pokecard > img {
+  width: 150px;
+  height: 150px;
+}
+
+.Pokecard img {
+  transition: ease 500ms;
+}
+
+.Pokecard img:hover {
+  transform: scale(1.25);
+  opacity: 0.8;
+}
+
+.Pokecard-data {
+  font-size: 80%;
 }
